# python-strict-template

./: .gitignore  .gitlab-ci.yml  .jscpd.json  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  vulture_whitelist.py
.github/workflows/: ci.yml
.semgrep/: rules.yaml
scripts/: clean.py  jscpd.py
src/: __init__.py  example.py
tests/: conftest.py  test_example.py
