[project]
name = "python-strict-template"
version = "0.1.0"
description = "Python project template with comprehensive LLM code safety toolchain"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Developer" }]
keywords = ["python", "template", "llm", "safety", "toolchain"]

[project.optional-dependencies]
dev = [
    # Linting & Formatting
    "ruff>=0.14.13",

    # Type Checking

    # Testing
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.150.0",

    # Runtime Validation
    "pydantic[email]>=2.12.5",
    "beartype>=0.22.9",

    # Security
    "bandit>=1.9.2",
    "pip-audit>=2.10.0",
    "detect-secrets>=1.5.0",

    # CI/Automation
    "prek>=0.2.30",
    "poethepoet>=0.40.0",

    # Advanced Static Analysis
    "basedpyright>=1.37.1",
    "vulture>=2.14",
    "pyscn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================================
# RUFF - Ultra-fast linter and formatter
# ============================================================================
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented code)
    "PL",   # pylint
    "RUF",  # ruff-specific
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EXE",  # flake8-executable
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "TID",  # flake8-tidy-imports
    "INT",  # flake8-gettext
    "FLY",  # flynt
    "PERF", # perflint
    "FURB", # refurb
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "COM812", # trailing comma (conflicts with formatter)
    "ISC001", # implicit string concat (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # allow assert in tests
    "ARG",     # allow unused arguments in fixtures
    "PLR2004", # allow magic values in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


# ============================================================================
# PYTEST - Testing configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers", "--strict-config"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = ["error", "ignore::DeprecationWarning"]

# ============================================================================
# COVERAGE - Code coverage configuration
# ============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# BANDIT - Security linting
# ============================================================================
# ============================================================================
# BANDIT - Security linting
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]                  # allow assert in non-test code if needed

# ============================================================================
# BASED-PYRIGHT - Strict type checking
# ============================================================================
[tool.basedpyright]
typeCheckingMode = "standard"


# ============================================================================
# DETECT-SECRETS - Secrets detection
# ============================================================================
# Configuration is in .secrets.baseline (generated by detect-secrets)

# ============================================================================
# POE THE POET - Task Runner (replaces Makefile)
# ============================================================================
[tool.poe]
default_task_type = "cmd"

[tool.poe.tasks]
# Installation & Setup
install = { cmd = "uv sync --all-extras", help = "Install all dependencies" }
setup = { sequence = [
    "install",
    "pre-commit-install",
], help = "Full project setup" }
pre-commit-install = { cmd = "pre-commit install", help = "Install pre-commit hooks" }

# Linting & Formatting
lint = { cmd = "ruff check src/ tests/", help = "Run linter" }
lint-fix = { cmd = "ruff check src/ tests/ --fix", help = "Run linter with auto-fix" }
format = { cmd = "ruff format src/ tests/", help = "Format code" }
format-check = { cmd = "ruff format --check src/ tests/", help = "Check formatting" }

# Type Checking
typecheck = { cmd = "basedpyright", help = "Run strict type checking with BasedPyright" }

# Testing
test = { cmd = "pytest --cov=src --cov-report=term-missing", help = "Run tests with coverage" }
test-fast = { cmd = "pytest", help = "Run tests without coverage" }
test-html = { cmd = "pytest --cov=src --cov-report=html", help = "Generate HTML coverage report" }

# Security & Quality
bandit = { cmd = "bandit -r src/ -c pyproject.toml", help = "Run Bandit security linter" }
audit = { cmd = "pip-audit", help = "Audit dependencies for CVEs" }
dead-code = { cmd = "vulture src/ --min-confidence 60", help = "Find dead code" }
quality = { cmd = "pyscn check .", help = "Run quality scan" }
security = { sequence = [
    "bandit",
    "audit",
    "dead-code",
    "quality",
], help = "Run all security/quality checks" }

# Combined Checks
check = { sequence = [
    "lint-fix",
    "format",
    "typecheck",
    "test",
    "security",
], help = "Run ALL checks (CI simulation)" }
ci = { sequence = [
    "lint",
    "format-check",
    "typecheck",
    "test",
], help = "CI pipeline checks" }

# Cleanup
clean = { shell = "rm -rf build/ dist/ *.egg-info .pytest_cache .ruff_cache htmlcov .coverage", help = "Clean build artifacts" }
