[project]
name = "python-strict-template"
version = "0.1.0"
description = "Python project template with comprehensive LLM code safety toolchain"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Developer" }]
keywords = ["python", "template", "llm", "safety", "toolchain"]
dependencies = []

[project.optional-dependencies]
dev = [
    # Linting & Formatting
    "ruff>=0.14.13",

    # Type Checking

    # Testing
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.150.0",

    # Runtime Validation
    "pydantic[email]>=2.12.5",
    "beartype>=0.22.9",

    # Security
    "bandit>=1.9.2",
    "pip-audit>=2.10.0",
    "detect-secrets>=1.5.0",

    # CI/Automation
    "prek>=0.2.30",
    "poethepoet>=0.40.0",

    # Advanced Static Analysis
    "basedpyright>=1.37.1",
    "vulture>=2.14",
    "pyscn",
    "ty",
    "gitingest",

    # Duplication Detection
    "pylint>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================================
# RUFF - Ultra-fast linter and formatter
# ============================================================================
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]
exclude = ["vulture_whitelist.py"]
preview = true                     # Enable preview rules

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "C4",    # flake8-comprehensions
    "C90",   # mccabe complexity
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented code)
    "PL",    # pylint
    "RUF",   # ruff-specific
    "S",     # flake8-bandit (security)
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "EXE",   # flake8-executable
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "TID",   # flake8-tidy-imports
    "INT",   # flake8-gettext
    "FLY",   # flynt
    "PERF",  # perflint
    "FURB",  # refurb
    "N",     # pep8-naming
    "ASYNC", # flake8-async
    "ANN",   # flake8-annotations
    "FBT",   # flake8-boolean-trap
    "D",     # pydocstyle
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "COM812", # trailing comma (conflicts with formatter)
    "ISC001", # implicit string concat (conflicts with formatter)
    "S603",   # subprocess without shell=True (too strict)
    "S607",   # process with partial path (too strict)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-nested-blocks = 3

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/**/*.py" = [
    "TCH", # beartype needs types at runtime
]
"tests/**/*.py" = [
    "S101",    # allow assert in tests
    "ARG",     # allow unused arguments in fixtures
    "PLR2004", # allow magic values in tests
    "ANN",     # don't require annotations in tests
    "FBT",     # allow boolean args in tests
    "PLR6301", # allow methods that don't use self
    "D",       # allow informal docstrings in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


# ============================================================================
# PYTEST - Testing configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "-W error",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = ["error", "ignore::DeprecationWarning"]

# ============================================================================
# COVERAGE - Code coverage configuration
# ============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# BANDIT - Security linting
# ============================================================================
# ============================================================================
# BANDIT - Security linting
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]                  # allow assert in non-test code if needed

# ============================================================================
# BASED-PYRIGHT - Strict type checking
# ============================================================================
[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = true
reportUndefinedVariable = true
reportAssertAlwaysTrue = true
reportInvalidStringEscapeSequence = true

# ============================================================
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportAny = true
reportExplicitAny = true
reportIgnoreCommentWithoutRule = false
reportPrivateLocalImportUsage = true

# ============================================================
reportMissingParameterType = true
reportMissingTypeArgument = true
reportUnknownParameterType = true
reportUnknownLambdaType = true
reportUnknownArgumentType = true
reportUnknownVariableType = true
reportUnknownMemberType = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true

# ============================================================
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportUninitializedInstanceVariable = true
reportOverlappingOverload = true
reportMissingSuperCall = true

# ============================================================
reportPrivateUsage = true
reportConstantRedefinition = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUnsupportedDunderAll = true
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportUnusedImport = "error"
reportDuplicateImport = "error"

# ============================================================
reportUnnecessaryIsInstance = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportUnnecessaryTypeIgnoreComment = "error"

# ============================================================
reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
reportFunctionMemberAccess = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true

# ============================================================
reportImplicitOverride = true
reportDeprecated = "warning"

# ============================================================
reportImportCycles = "warning"

# ============================================================
exclude = [
    "vulture_whitelist.py",
    "**/__pycache__",
    "**/node_modules",
    ".git",
    ".mypy_cache",
    ".pyright_cache",
    ".ruff_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "env",
    "logs",
    "output",
    "data",
    "build",
    "dist",
    "*.egg-info",
]

executionEnvironments = [
    { root = "tests", reportUnknownArgumentType = "none", reportUnknownVariableType = "none", reportUnknownMemberType = "none", reportAny = "none", reportExplicitAny = "none", reportUntypedFunctionDecorator = "none", reportUntypedClassDecorator = "none", reportUntypedBaseClass = "none" },
]

venvPath = "."
venv = ".venv"


# ============================================================================
# PYLINT - Duplicate code detection (R0801)
# ============================================================================
[tool.pylint.main]
ignore = [".venv", "tests", "vulture_whitelist.py"]
jobs = 0                                            # Auto-detect CPU count

[tool.pylint."messages control"]
disable = "all"
enable = "R0801" # duplicate-code only

[tool.pylint.similarities]
min-similarity-lines = 5
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true

# ============================================================================
# DETECT-SECRETS - Secrets detection
# ============================================================================
# Configuration is in .secrets.baseline (generated by detect-secrets)

# ============================================================================
# POE THE POET - Task Runner (replaces Makefile)
# ============================================================================
[tool.poe]
default_task_type = "cmd"

[tool.poe.tasks]
# --- HYGIENE ---
format = { sequence = [
    { cmd = "ruff format ." },
    { cmd = "ruff check . --fix" },
], help = "Format code and fix linting issues" }

lint = { cmd = "ruff check .", help = "Run linter (check only)" }
lint-unsafe = { cmd = "ruff check . --fix --unsafe-fixes", help = "Lint with unsafe fixes" }

# --- TYPE CHECKING ---
typecheck = { sequence = [
    "typecheck-basedpyright",
    "typecheck-ty",
], help = "Run all type checkers" }
typecheck-basedpyright = { cmd = "basedpyright --level error", help = "Run BasedPyright" }
typecheck-ty = { cmd = "ty check .", help = "Run ty" }

security = { sequence = [
    "security-bandit",
    "security-semgrep",
    "security-audit",
    "security-secrets",
], help = "Run all security scans" }
security-bandit = { cmd = "bandit -r src/ -c pyproject.toml", help = "Run Bandit" }
security-semgrep = { cmd = "semgrep scan --config auto --config .semgrep/ --error", env = { PYTHONUTF8 = "1" }, help = "Run Semgrep" }
security-audit = { cmd = "pip-audit", help = "Audit dependencies" }
security-secrets = { cmd = "detect-secrets scan --all-files --exclude-files '(.venv|uv.lock|.ruff_cache|.pytest_cache|.*\\.egg-info|build|dist)'", help = "Scan for secrets" }

# --- TESTING ---
test = { cmd = "pytest --cov=src --cov-report=term-missing", help = "Run tests with coverage" }
test-fast = { cmd = "pytest", help = "Run tests without coverage" }

# --- DUPLICATION DETECTION ---
duplicate = { sequence = [
    "duplicate-pylint",
    "duplicate-jscpd",
], help = "Run all duplication checks" }
duplicate-pylint = { cmd = "pylint src/ --exit-zero", help = "Pylint R0801 duplicate detection" }
duplicate-jscpd = { cmd = "python scripts/jscpd.py", help = "jscpd token-based clone detection" }

# --- FULL QUALITY ASSURANCE ---
quality = { sequence = [
    "format",
    "typecheck",
    "security",
    "duplicate",
    { cmd = "pyscn check ." },
    { cmd = "vulture src/ --min-confidence 60" },
], help = "Run FULL quality suite" }

# --- SETUP & MAINTENANCE ---
install = { cmd = "uv sync --all-extras", help = "Install all dependencies" }
setup = { sequence = [
    "install",
    { cmd = "prek install" },
], help = "Full project setup" }
clean = { cmd = "python scripts/clean.py", help = "Clean build artifacts" }
